work/07/css/03.css
* {
  margin: 0;
  padding: 0;
}

body {
  font-family: "NHaasGroteskDSStd-55Rg", sans-serif;
  letter-spacing: 0.103vw;
  position: relative;
  width: 100vw;
}

/* spacing+layout */
.container--about {
  margin: 12.5vh auto;
  width: 87.5vw;
}

.section {
  margin: 5vh 0;
}

.section--sub {
  /* margin: 1.25vh 0; */
}

.center {
  margin: auto;
  position: relative;
}

.background--hover {
  background: #ffeea9;
  /* background: #ffea2d; */
  margin-top: 1vw;
  height: 2vw;
  position: absolute;
  z-index: -1;
  transition: 0.5s;
}

.previewImg {
  top: 0;
  left: 0;
  position: absolute;
  z-index: 10;
  max-height: 70vh;
}

/* row */
.row {
  display: flex;
}

.left {
  flex: 42.5%;
}

.right {
  flex: 57.5%;
}

.spacer {
  letter-spacing: -2px;
}

.spacer--inline {
  display: inline-block;
  width: 21vw;
}

.spacer--w {
  visibility: hidden;
}

.shift {
  margin-top: -3.25vw !important;
}

/* type */
p {
  font-size: 2.25vw;
  text-align: justify;
}

.section--sub,
.spacer--w,
p {
  line-height: 1.5;
}

small {
  font-size: 1vw;
  font-weight: 900;
  z-index: 10;
  margin-left: -0.25vw;
  margin-top: -0.125vw;
  position: absolute;
}

.small--date {
  white-space: nowrap;
  margin-left: -3.75vw;
  margin-top: -0.75vw;
  font-style: italic;
}

.r {
  margin-bottom: 1.25vw;
  text-align: right;
}

.r:nth-child(even) {
  margin-bottom: 0.5vw;
}

/* links */
a {
  color: black;
  /* mix-blend-mode: multiply; */
  text-decoration: none;
}

.transition {
  transition: 1s;
}


/* test */

div#toolbar {
  display: none !important;
}

